--- a/.github/workflows/cobrinha.yml
+++ b/.github/workflows/cobrinha.yml
@@ -27,7 +27,7 @@ jobs:
       - name: generate github-contribution-grid-snake.svg
         uses: Platane/snk/svg-only@v3
         with:
-          github_user_name: ${{ github.repository_laborba }}
+          github_user_name: laborba
           outputs: |
             dist/github-contribution-grid-snake.svg
             dist/github-contribution-grid-snake-dark.svg?palette=github-dark
